# neuroips

./: .gitignore  ALL_PROFILES_REPORT.md  ARCHITECTURE.md  CMakeLists.txt  DEVIANCE_OBJECTIVE_RESULTS.md  DIAGNOSTIC_COMPILE.md  DIAGNOSTIC_L23.md  DIAGNOSTIC_NAN_V2.md  DIAGNOSTIC_SACC.md  DIAGNOSTIC_STUCK_MODELS.md  EXPERIMENTS_REPORT.md  EXPERIMENT_C_VERIFICATION.md  FIXES_REPORT.md  HARDENING_RESULTS.md  MERGE_REPORT.md  OBJECTIVE_FIXES_REPORT.md  OPTIMIZATION_REPORT.md  PHASE4_FIX_REPORT.md  PHASE4_REPORT.md  PHASE5_5_REPORT.md  PHASE5_FIX_REPORT.md  PHASE5_REPORT.md  PHASE6_REPORT.md  PHASE7_REPORT.md  PILOT_V3_REPORT.md  PROFILE_ANALYSIS.md  PROFILE_SHAPES.md  README.md  REFACTOR_REPORT.md  REPRESENTATION_ANALYSIS_RESULTS.md  RESULTS.md  SIMPLE_TASK_REPORT.md  SOM_ONLY_REPORT.md  SOM_ONLY_VERIFICATION.md  SPEEDUP_REPORT.md  SWEEP_REPORT.md  TARGETED_CONDITIONS_REPORT.md  TEMPLATE_MANIPULATION_RESULTS.md  adex_v1.cu  codebase_mapping.txt  (+17 more)
checkpoints/: decoder_a_cotrained_a1.pt  decoder_a_cotrained_b1.pt  decoder_a_cotrained_c1.pt  decoder_a_cotrained_e1.pt  decoder_a_cotrained_r1r2.pt  decoder_a_prime.pt  decoder_a_prime_20k_a1.pt  decoder_a_prime_20k_b1.pt  decoder_a_prime_20k_c1.pt  decoder_a_prime_20k_e1.pt  decoder_a_prime_20k_r1r2.pt  decoder_a_prime_a1.pt  decoder_a_prime_b1.pt  decoder_a_prime_c1.pt  decoder_a_prime_e1.pt  decoder_c.pt  decoder_d_20k_raw_a1.pt  decoder_d_20k_raw_b1.pt  decoder_d_20k_raw_c1.pt  decoder_d_20k_raw_e1.pt  decoder_d_20k_shape_a1.pt  decoder_d_20k_shape_b1.pt  decoder_d_20k_shape_c1.pt  decoder_d_20k_shape_e1.pt  decoder_d_fbON_neutral_raw_a1.pt  decoder_d_fbON_neutral_raw_b1.pt  decoder_d_fbON_neutral_raw_c1.pt  decoder_d_fbON_neutral_raw_e1.pt  decoder_d_fbON_neutral_raw_r1r2.pt  decoder_d_fbON_neutral_shape_a1.pt  decoder_d_fbON_neutral_shape_b1.pt  decoder_d_fbON_neutral_shape_c1.pt  decoder_d_fbON_neutral_shape_e1.pt  decoder_d_fbON_neutral_shape_r1r2.pt  decoder_e_a1.pt  decoder_e_b1.pt  decoder_e_c1.pt  decoder_e_e1.pt  decoder_e_r1r2.pt  net_seed43_a1.pt  (+4 more)
config/: apical_50reliable.yaml  apical_no_adapt.yaml  apical_template_random.yaml  apical_template_true.yaml  apical_template_uniform.yaml  apical_template_wrong.yaml  confound_damp_50reliable.yaml  confound_damp_no_adapt.yaml  confound_damp_no_predict.yaml  confound_p4_50reliable.yaml  confound_p4_no_adapt.yaml  confound_p4_no_predict.yaml  cue_local_competitor_oracle.yaml  defaults.yaml  e2e_deviance.yaml  e2e_p4.yaml  exp1_energy.yaml  exp2_noise.yaml  exp3_surprise.yaml  exp_ambig_p4.yaml  exp_apical.yaml  exp_apical_e2e.yaml  exp_apical_tier2.yaml  exp_branch_a.yaml  exp_centersurround.yaml  exp_dampening.yaml  exp_dampening_d1.yaml  exp_dampening_d1_weighted.yaml  exp_dampening_d2.yaml  exp_dampening_d2_weighted.yaml  exp_dampening_d3.yaml  exp_dampening_d3_weighted.yaml  exp_deviance.yaml  exp_eff1.yaml  exp_eff2.yaml  exp_eff3.yaml  exp_eff4.yaml  exp_eff5.yaml  exp_iter1.yaml  exp_iter2.yaml  (+57 more)
cpp_cuda/: CMakeLists.txt
cpp_cuda/include/expectation_snn_cuda/: manifest.hpp
cpp_cuda/src/: bindings.cpp  native_cli.cpp  richter_eval.cu
docs/: R1R2_full_report.md  current_state_expectation_snn_2026-04-22.md  decision_ledger.md  native_cuda_richter_dampening_2026-04-24.md  native_cuda_richter_full_sync_2026-04-25.md  native_cuda_status_2026-04-23.md  project_summary.md  r1_2_debug_log.md  rescues_1_to_4_summary.md  research_log.md  session_handoff_2026-04-24.md  stage1_ctx_pred_attempt1_snapshot.md  stage1_ctx_pred_attempt3_snapshot.md  stage1_ctx_pred_attempt4_snapshot.md  task50_report.md  task73_addendum_som_baseline.md  task74_dampening_mechanism_problem.md  task74_handoff.md  training_experiments_analysis_design.md  v1_cat_primate_connectivity_osi.md  v1_l4_l23_orientation_match_evidence.md  v1_l4_l23_osi_biology.md  v1_stdp_multiplicative_attractor_diagnosis.md  v2_model_status.md
expectation_snn/: .gitignore  README.md  env.yml
logs/: dx58_dx5_dx8.err  dx58_smoke.err  level10_post_fixO.json  level10_post_fixP.json  level10_post_fixQ.json  level10_post_fixQprime.json  level10_whole_network_stability.json  level8_prediction_head.json  level9_plasticity_rules.json  task49_final_report.md
results/: cross_decoder_comprehensive_20k_final.json  cross_decoder_comprehensive_20k_final.md  cross_decoder_comprehensive_final.json  cross_decoder_comprehensive_final.md  cross_decoder_comprehensive_withD_fbON.json  cross_decoder_comprehensive_withD_fbON.md  cross_decoder_comprehensive_with_all_decoders.json  cross_decoder_comprehensive_with_all_decoders.md  decA_probe_r1_2.json  decoder_a_cotrained_training_a1.json  decoder_a_cotrained_training_b1.json  (+64 more)
(+879 files in other folders)
